--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -1,114 +1,115 @@
-.subscribe, .social {
-    color: #fff;
-    background: #222;
+.subscribe,
+.social {
+  color: #fff;
+  background: #222;
 
-    padding: .5em;
+  padding: 0.5em;
 
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .subscribe > div {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .subscribe form {
-    margin-left: 3em;
+  margin-left: 3em;
 }
 
 .subscribe form input {
-    padding: .5em;
+  padding: 0.5em;
 }
 
 .subscribe form input:first-child {
-    background: #fff;
-    border: none;
-    border-radius: 12px 0 0 12px;
+  background: #fff;
+  border: none;
+  border-radius: 12px 0 0 12px;
 
-    color: #000;
+  color: #000;
 }
 
 .subscribe form input:last-child {
-    background: #6FCA6D;
-    border: none;
-    border-radius: 0 12px 12px 0;
+  background: #6fca6d;
+  border: none;
+  border-radius: 0 12px 12px 0;
 }
 
 .subscribe form input:focus-visible {
-    outline: none;
+  outline: none;
 }
 
 .subscribe form input:last-child:active {
-    outline: 1px solid #76ca6d;
+  outline: 1px solid #76ca6d;
 }
 
 .social {
-    position: relative;
-    padding: 2em;
+  position: relative;
+  padding: 2em;
 }
 
 .social::before {
-    content: "";
-    display: inline-block;
-    width: 75%;
-    height: 1px;
-    background: #fffa;
+  content: '';
+  display: inline-block;
+  width: 75%;
+  height: 1px;
+  background: #fffa;
 
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .social > div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 2em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2em;
 
-    width: 70%;
+  width: 70%;
 }
 
 .social iframe {
-    aspect-ratio: 16 / 9;
+  aspect-ratio: 16 / 9;
 
-    width: 40%;
-    height: auto;
+  width: 40%;
+  height: auto;
 }
 
 .social-text {
-    max-width: 30%;
+  max-width: 30%;
 }
 
 .social-icons {
-    list-style: none;
-    display: flex;
-    gap: 1em;
-    flex-flow: row nowrap;
-    padding: 0;
+  list-style: none;
+  display: flex;
+  gap: 1em;
+  flex-flow: row nowrap;
+  padding: 0;
 }
 
 .social-icons li {
-    aspect-ratio: 1 / 1;
-    border-radius: 50%;
-    background: #333;
-    transform: scale(1);
-    transition: .5s;
+  aspect-ratio: 1 / 1;
+  border-radius: 50%;
+  background: #333;
+  transform: scale(1);
+  transition: 0.5s;
 }
 
 .social-icons li:hover {
-    background: #444;
-    transform: scale(1.1);
+  background: #444;
+  transform: scale(1.1);
 }
 
 .social-icons li a {
-    display: inline-block;
-    padding: .7em;
-    width: 100%;
-    height: 100%;
+  display: inline-block;
+  padding: 0.7em;
+  width: 100%;
+  height: 100%;
 }
 
 .social-icons img {
-    height: 2em;
+  height: 2em;
 }
