--- a/src/sections/Footer.css
+++ b/src/sections/Footer.css
@@ -1,11 +1,11 @@
 footer {
-    background: #222;
-    width: 100vw;
-    padding: .5em;
+  background: #222;
+  width: 100vw;
+  padding: 0.5em;
 
-    color: #fff;
-    font-size: 1.3em;
+  color: #fff;
+  font-size: 1.3em;
 
-    display: flex;
-    place-content: center;
+  display: flex;
+  place-content: center;
 }
