--- a/src/index.css
+++ b/src/index.css
@@ -4,18 +4,19 @@
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
   font-weight: 400;
+  line-height: 1.5;
+  color: rgb(0 0 0 / 87%);
+  text-size-adjust: 100%;
+  text-rendering: optimizelegibility;
 
   color-scheme: light dark;
-  color: rgba(0, 0, 0, 0.87);
   background-color: #ddd;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+
+  font-synthesis: none;
 }
 
 a {
@@ -24,14 +25,15 @@ a {
   text-decoration: inherit;
   transition: 0.5s;
 }
+
 a:hover {
   color: #aaa;
 }
 
 body {
-  margin: 0;
   min-width: 100vw;
   min-height: 100vh;
+  margin: 0;
 }
 
 h1 {
@@ -40,33 +42,50 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
+  cursor: pointer;
+
   padding: 0.6em 1.2em;
+
+  font-family: inherit;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
+
   background-color: #1a1a1a;
-  cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: 8px;
+
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-/*@media (prefers-color-scheme: light) {*/
-/*  :root {*/
-/*    color: #213547;*/
-/*    background-color: #ffffff;*/
-/*  }*/
-/*  a:hover {*/
-/*    color: #747bff;*/
-/*  }*/
-/*  button {*/
-/*    background-color: #f9f9f9;*/
-/*  }*/
-/*}*/
+/* @media (prefers-color-scheme: light) { */
+
+/*  :root { */
+
+/*    color: #213547; */
+
+/*    background-color: #ffffff; */
+
+/*  } */
+
+/*  a:hover { */
+
+/*    color: #747bff; */
+
+/*  } */
+
+/*  button { */
+
+/*    background-color: #f9f9f9; */
+
+/*  } */
+
+/* } */
