--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -1,3 +1,3 @@
-@import "./normalize.css";
-@import "./sanitize.css";
-@import "./vars.css";
+@import './normalize.css';
+@import './sanitize.css';
+@import './vars.css';
