--- a/src/app/styles/normalize.css
+++ b/src/app/styles/normalize.css
@@ -5,7 +5,7 @@
  * 1. Correct the line height in all browsers.
  */
 
- :where(html) {
+:where(html) {
   line-height: 1.15; /* 1 */
 }
 
@@ -130,7 +130,7 @@
  * Correct the inability to style buttons in iOS and Safari.
  */
 
-:where(button, input:is([type="button" i], [type="reset" i], [type="submit" i])) {
+:where(button, input:is([type='button' i], [type='reset' i], [type='submit' i])) {
   -webkit-appearance: button;
 }
 
@@ -163,7 +163,7 @@
  * 2. Correct the outline style in Safari.
  */
 
-:where(input[type="search" i]) {
+:where(input[type='search' i]) {
   -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
@@ -208,7 +208,7 @@
  * Remove the inner border and padding of focus outlines in Firefox.
  */
 
-:where(button, input:is([type="button" i], [type="color" i], [type="reset" i], [type="submit" i]))::-moz-focus-inner {
+:where(button, input:is([type='button' i], [type='color' i], [type='reset' i], [type='submit' i]))::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -217,7 +217,7 @@
  * Restore the focus outline styles unset by the previous rule in Firefox.
  */
 
-:where(button, input:is([type="button" i], [type="color" i], [type="reset" i], [type="submit" i]))::-moz-focusring {
+:where(button, input:is([type='button' i], [type='color' i], [type='reset' i], [type='submit' i]))::-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
